--- a/aula/node-express/package.json
+++ b/aula/node-express/package.json
@@ -11,7 +11,11 @@
   "license": "Free",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
