--- a/aula/admin-usuario/package.json
+++ b/aula/admin-usuario/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.5"
   }
 }
